--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 Dart <span class="fas fa-bullseye"></span>
                             </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                Batch <span class="fas fa-file-contract"></span>
+                            </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4">
