adding more projects to portfolio

--- a/index.html
+++ b/index.html
@@ -392,7 +392,64 @@
                     </div>
                 </div>
                 <div class="row grid mt-5 projectItems">
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item" data-filter="popular">
+                        <div class="our-project">
+                            <div class="img">
+                                <div class="projectContainer">
+                                    <img src="images/EmployeeCMS.jpg" alt="Avatar" class="projectImage">
+                                    <div class="projectOverlay">
+                                        <div class="projectText">
+                                            <h4 class="text-uppercase">Employee CMS</h4>
+                                            <h4 class="text-uppercase"><button class="btn btn-outline-primary customButtonBorder" onclick="new ModalWindow('employeecms')">Readmore</button></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Employee CMS</h4>
+                                <span class="text-secondary"><i>Project built with:<br> Spring Boot, Maven, Java, Thymeleaf</i></span>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item" data-filter="latest">
+                        <div class="our-project">
+                            <div class="img">
+                                <div class="projectContainer">
+                                    <img src="images/iCalendar.jpg" alt="Avatar" class="projectImage">
+                                    <div class="projectOverlay">
+                                        <div class="projectText">
+                                            <h4 class="text-uppercase">Personio iCalendar Reader</h4>
+                                            <h4 class="text-uppercase"><button class="btn btn-outline-primary customButtonBorder" onclick="new ModalWindow('icalendar')">Readmore</button></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Personio iCalendar Reader</h4>
+                                <span class="text-secondary"><i>Project built with:<br> NodeJS, Express, Nodemon, Bootstrap, EJS</i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item" data-filter="developing">
+                        <div class="our-project">
+                            <div class="img">
+                                <div class="projectContainer">
+                                    <img src="images/ScreenRecorder.jpg" alt="Avatar" class="projectImage">
+                                    <div class="projectOverlay">
+                                        <div class="projectText">
+                                            <h4 class="text-uppercase">Screen Recording</h4>
+                                            <h4 class="text-uppercase"><button class="btn btn-outline-primary customButtonBorder" onclick="new ModalWindow('screenrecorder')">Readmore</button></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Screen Recording</h4>
+                                <span class="text-secondary"><i>Project built with:<br> Vanila JS</i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item" data-filter="popular">
                         <div class="our-project">
                             <div class="img">
                                 <div class="projectContainer">
@@ -449,7 +506,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 element-item" data-filter="latest">
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item" data-filter="developing">
                         <div class="our-project">
                             <div class="img">
                                 <div class="projectContainer">
