--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 Batch <span class="fas fa-file-contract"></span>
                             </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                Python <span class="fab fa-python"></span>
+                            </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4">
