--- a/NewDesign.html
+++ b/NewDesign.html
@@ -29,16 +29,16 @@
                 <div class="text-center">
                     <p class="myText"></p>
                 </div>
-                <div id="triangle-down" class="init"></div>
+                <div id="triangle-down" class="init" onclick="scrollToClass('myAbout')"></div>
             </div>
         </div>
     </section>
     <nav class="header init">
         <p class="font-thin">CrissCrossCrass</p>
-        <p class="font-bold"><a class="hover-border" href="#about">About</a></p>
-        <p class="font-bold"><a class="hover-border" href="#skills">Skills</a></p>
-        <p class="font-bold"><a class="hover-border" href="#projects">Projects</a></p>
-        <p class="font-bold"><a class="hover-border" href="#contatc">Contact</a></p>
+        <p class="font-bold"><a class="hover-border" href="#about" onclick="scrollToClass('myAbout')">About</a></p>
+        <p class="font-bold"><a class="hover-border" href="#skills" onclick="scrollToClass('mySkill')">Skills</a></p>
+        <p class="font-bold"><a class="hover-border" href="#projects" onclick="scrollToClass('myProjects')">Projects</a></p>
+        <p class="font-bold"><a class="hover-border" href="#contatc" onclick="scrollToClass('myContact')">Contact</a></p>
     </nav>
     <section class="about bg-primary">
         <h2 class="text-right headline myAbout">A</h2>
@@ -76,7 +76,7 @@
         </div>
     </section>
     <section class="skills bg-primary">
-        <h2 class="text-right headline">Skills</h2>
+        <h2 class="text-right headline mySkill">Skills</h2>
         <div class="center-container">
             <div class="container">
                 <div class="split p-2 text-center">
@@ -98,7 +98,7 @@
     </section>
     <section class="projects bg-primary">
         <div>
-            <h2 class="text-right headline">Projects</h2>
+            <h2 class="text-right headline myProjects">Projects</h2>
             <div class="center-container">
                 <div class="container">
                     <div class="flex-wrap">
@@ -130,7 +130,7 @@
     </section>
     <section class="contact bg-primary">
         <div>
-            <h2 class="text-right headline">Contact</h2>
+            <h2 class="text-right headline myContact">Contact</h2>
             <div class="center-container">
                 <div class="container">
                     <div class="flex-row">
@@ -185,6 +185,24 @@
         <p class="footer"><span>CrissCrossCrass &copy 2021</span></p>
     </footer>
     <script>
+
+        // PageScrolling
+        function getOffset(el) {
+            var _x = 0;
+            var _y = 0;
+            while (el && !isNaN(el.offsetLeft) && !isNaN(el.offsetTop)) {
+                _x += el.offsetLeft - el.scrollLeft;
+                _y += el.offsetTop - el.scrollTop;
+                el = el.offsetParent;
+            }
+            return { top: _y, left: _x };
+        }
+        function scrollToClass(className) {
+            let element = document.getElementsByClassName(className)[0];
+            let elHeight = element.offsetHeight;
+            let targetPosition = getOffset(element);
+            window.scrollTo(0, targetPosition.top - elHeight/2);
+        }
 
         // Typing Animations
         var typedName = new Typed('.myName', {
