--- a/NewDesign.html
+++ b/NewDesign.html
@@ -38,7 +38,7 @@
         <p class="font-bold"><a class="hover-border" href="#about" onclick="scrollToClass('myAbout')">About</a></p>
         <p class="font-bold"><a class="hover-border" href="#skills" onclick="scrollToClass('mySkills')">Skills</a></p>
         <p class="font-bold"><a class="hover-border" href="#projects" onclick="scrollToClass('myProjects')">Projects</a></p>
-        <p class="font-bold"><a class="hover-border" href="#contatc" onclick="scrollToClass('myContact')">Contact</a></p>
+        <p class="font-bold"><a class="hover-border" href="#contact" onclick="scrollToClass('myContact')">Contact</a></p>
     </nav>
     <section class="about bg-primary">
         <h2 class="text-right headline myAbout">A</h2>
@@ -219,11 +219,10 @@
         function typingTextHeader(className, arrayStrings){
             return new Typed(className, {
             strings: arrayStrings,
-            typeSpeed: 400,
+            typeSpeed: 200,
             showCursor: false,
         });
         }
-
 
         var typedName = new Typed('.myName', {
             // Waits 1000ms after typing "First"
